fixing enter button issues on ios

--- a/server/src/sass/components/_facets.scss
+++ b/server/src/sass/components/_facets.scss
@@ -132,7 +132,6 @@
 .defra-facets__reset {
   @extend .defra-button-text;
   text-decoration: none;
-  margin-top: 15px;
 }
 .defra-facets__footer {
   margin-top:15px;
